--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ name = "pymmcore-plus"
 description = "pymmcore superset providing improved APIs, event handling, and a pure python acquisition engine"
 keywords = ["microscope", "micro-manager", "smart-microscopy"]
 readme = "README.md"
-requires-python = ">=3.9"
+# since ome-writers requires python 3.10+
+requires-python = ">=3.10"
 license = { text = "BSD 3-Clause License" }
 authors = [
     { name = "Talley Lambert", email = "talley.lambert@gmail.com" },
@@ -39,7 +40,8 @@ dependencies = [
     "numpy >=1.26.0; python_version >= '3.12'",
     "numpy >=2.1.0; python_version >= '3.13'",
     "ome-types >=0.6.0",
-    "ome-writers[acquire-zarr,tensorstore,tifffile]>=0.0.1b0",
+    # temporary until next ome-writers release
+    "ome-writers[acquire-zarr,tensorstore,tifffile] @ git+https://github.com/pymmcore-plus/ome-writers",
     "platformdirs >=3.0.0",
     "psygnal >=0.10",
     "pymmcore >=11.10.0.74.0",
