--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ name = "pymmcore-plus"
 description = "pymmcore superset providing improved APIs, event handling, and a pure python acquisition engine"
 keywords = ["microscope", "micro-manager", "smart-microscopy"]
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 license = { text = "BSD 3-Clause License" }
 authors = [
     { name = "Talley Lambert", email = "talley.lambert@gmail.com" },
@@ -49,6 +49,7 @@ dependencies = [
     "typer >=0.4.2",
     "rich >=10.2.0",
     "ome-types >=0.6.0",
+    "yaozarrs",
 ]
 
 # extras
